Fix the cimplog link error.  Add libmpack for experimentation.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,6 +31,7 @@ file(MAKE_DIRECTORY ${TEST_RESULTS_DIR})
 include_directories(${INCLUDE_DIR}
                     ${INCLUDE_DIR}/cimplog
                     ${INCLUDE_DIR}/msgpack
+                    ${INCLUDE_DIR}/libmpack
                     ${INCLUDE_DIR}/trower-base64
                     ${INCLUDE_DIR}/wrp-c
                     ${INCLUDE_DIR}/libparodus
@@ -90,6 +91,21 @@ add_library(libmsgpack STATIC SHARED IMPORTED)
 add_dependencies(libmsgpack msgpack)
 
 
+# libmpack external dependency
+#-------------------------------------------------------------------------------
+ExternalProject_Add(mpack
+    PREFIX ${CMAKE_CURRENT_BINARY_DIR}/_prefix/libmpack
+    GIT_REPOSITORY https://github.com/libmpack/libmpack.git
+    #GIT_TAG "c6e6dbc608366090c12b142b3832604e6aa12f54"
+    CONFIGURE_COMMAND ""
+    BUILD_COMMAND COMMAND make
+    INSTALL_COMMAND COMMAND make install PREFIX=${INSTALL_DIR}
+    BUILD_IN_SOURCE 1
+)
+add_library(libmpack STATIC SHARED IMPORTED)
+add_dependencies(libmpack mpack)
+
+
 # cimplog external dependency
 #-------------------------------------------------------------------------------
 ExternalProject_Add(cimplog
@@ -105,7 +121,7 @@ add_dependencies(libcimplog cimplog)
 # wrp-c external dependency
 #-------------------------------------------------------------------------------
 ExternalProject_Add(wrp-c
-    DEPENDS trower-base64 msgpack
+    DEPENDS trower-base64 msgpack cimplog
     PREFIX ${CMAKE_CURRENT_BINARY_DIR}/_prefix/wrp-c
     GIT_REPOSITORY https://github.com/Comcast/wrp-c.git
     GIT_TAG "master"
