--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -15,7 +15,7 @@
 set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -W -g -fprofile-arcs -ftest-coverage -O0")
 set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -W  -g -fprofile-arcs -ftest-coverage -O0")
 set (CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -fprofile-arcs -ftest-coverage -O0")
-set (AKER_SRC ../src/main.c)
+set (AKER_SRC ../src/main.c ../src/decode.c)
 set (AKER_COMMON_LIBS gcov -lcunit -lcimplog -lwrp-c -lpthread -lmsgpackc -lnanomsg -Wl,--no-as-needed -ltrower-base64)
 
 if(NOT DISABLE_VALGRIND)
@@ -28,7 +28,7 @@ link_directories ( ${LIBRARY_DIR} )
 #   test_schedule
 #-------------------------------------------------------------------------------
 add_test(NAME test_schedule COMMAND ${MEMORY_CHECK} ./test_schedule)
-add_executable(test_schedule test_schedule.c ../src/schedule.c)
+add_executable(test_schedule test_schedule.c ../src/schedule.c ../src/decode.c)
 target_link_libraries (test_schedule ${AKER_COMMON_LIBS})
 
 #-------------------------------------------------------------------------------
