--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -16,7 +16,8 @@ set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -W -g -fprofile-arcs -ftest-coverage 
 set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -W  -g -fprofile-arcs -ftest-coverage -O0")
 set (CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -fprofile-arcs -ftest-coverage -O0")
 set (AKER_SRC ../src/main.c ../src/decode.c)
-set (AKER_COMMON_LIBS gcov -lcunit -lcimplog -lwrp-c -lpthread -lmsgpackc -lnanomsg -Wl,--no-as-needed -ltrower-base64)
+set (AKER_COMMON_LIBS gcov -lcunit -lcimplog -lwrp-c -lpthread -lmsgpackc
+     -lnanomsg -Wl,--no-as-needed -ltrower-base64)
 
 if(NOT DISABLE_VALGRIND)
 set (MEMORY_CHECK valgrind --leak-check=full --show-reachable=yes -v)
@@ -28,7 +29,8 @@ link_directories ( ${LIBRARY_DIR} )
 #   test_schedule
 #-------------------------------------------------------------------------------
 add_test(NAME test_schedule COMMAND ${MEMORY_CHECK} ./test_schedule)
-add_executable(test_schedule test_schedule.c ../src/schedule_print.c ../src/schedule.c ../src/decode.c)
+add_executable(test_schedule test_schedule.c ../src/schedule_print.c 
+                ../src/schedule.c ../src/decode.c ../src/process_data.c)
 target_link_libraries (test_schedule ${AKER_COMMON_LIBS})
 
 #-------------------------------------------------------------------------------
