--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -13,7 +13,8 @@
 #   limitations under the License.
 
 set(PROJ_AKER aker)
-set(SOURCES wrp_interface.c decode.c time.c schedule.c main.c process_data.c)
+set(SOURCES wrp_interface.c decode.c time.c schedule.c main.c
+            process_data.c scheduler.c)
 
 
 add_executable(aker ${SOURCES})
