--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -54,3 +54,9 @@ add_test(NAME test_decode COMMAND ${MEMORY_CHECK} ./test_decode)
 add_executable(test_decode test_decode.c ../src/decode.c ../src/schedule.c ../src/time.c)
 target_link_libraries (test_decode ${AKER_COMMON_LIBS})
 
+#-------------------------------------------------------------------------------
+#   test_time
+#-------------------------------------------------------------------------------
+add_test(NAME test_time COMMAND ${MEMORY_CHECK} ./test_time)
+add_executable(test_time test_time.c ../src/time.c)
+target_link_libraries (test_time ${AKER_COMMON_LIBS})
