--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -30,7 +30,8 @@ link_directories ( ${LIBRARY_DIR} )
 #-------------------------------------------------------------------------------
 add_test(NAME test_schedule COMMAND ${MEMORY_CHECK} ./test_schedule)
 add_executable(test_schedule test_schedule.c ../src/schedule_print.c 
-                ../src/schedule.c ../src/decode.c ../src/process_data.c)
+                ../src/schedule.c ../src/decode.c ../src/process_data.c
+                ../src/aker_md5.c ../src/md5.c)
 target_link_libraries (test_schedule ${AKER_COMMON_LIBS})
 
 #-------------------------------------------------------------------------------
@@ -44,7 +45,8 @@ target_link_libraries (test_wrp_interface ${AKER_COMMON_LIBS})
 #   test_process_data
 #-------------------------------------------------------------------------------
 add_test(NAME test_process_data COMMAND ${MEMORY_CHECK} ./test_process_data)
-add_executable(test_process_data test_process_data.c ../src/process_data.c)
+add_executable(test_process_data test_process_data.c ../src/process_data.c
+               ../src/aker_md5.c ../src/md5.c)
 target_link_libraries (test_process_data ${AKER_COMMON_LIBS})
 
 #-------------------------------------------------------------------------------
