--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -39,10 +39,7 @@ target_link_libraries (test_schedule ${AKER_COMMON_LIBS})
 #   test_wrp_interface
 #-------------------------------------------------------------------------------
 add_test(NAME test_wrp_interface COMMAND ${MEMORY_CHECK} ./test_wrp_interface)
-add_executable(test_wrp_interface test_wrp_interface.c ../src/wrp_interface.c
-               ../src/process_data.c ../src/aker_md5.c ../src/md5.c
-               ../src/schedule_print.c ../src/schedule.c ../src/decode.c
-               ../src/time.c ../src/scheduler.c)
+add_executable(test_wrp_interface test_wrp_interface.c ../src/wrp_interface.c)
 target_link_libraries (test_wrp_interface ${AKER_COMMON_LIBS})
 
 #-------------------------------------------------------------------------------
