Adding a test file for time.c, since other tests use a stubbed out version

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -76,8 +76,18 @@ add_executable(test_md5 test_md5.c ../src/process_data.c ../src/aker_md5.c
                ../src/decode.c ../src/schedule_print.c)
 target_link_libraries (test_md5 ${AKER_COMMON_LIBS})
 
+#-------------------------------------------------------------------------------
+#   test_time
+#-------------------------------------------------------------------------------
+add_test(NAME test_time COMMAND ${MEMORY_CHECK} ./test_time)
+add_executable(test_time test_time.c ../src/time.c)
+target_link_libraries (test_time ${AKER_COMMON_LIBS})
+
+
 add_custom_target(coverage
 COMMAND lcov -q --capture --directory 
+${CMAKE_CURRENT_BINARY_DIR}/CMakeFiles/test_time.dir/__/src --output-file time.info
+COMMAND lcov -q --capture --directory
 ${CMAKE_CURRENT_BINARY_DIR}/CMakeFiles/test_md5.dir/__/src --output-file md5.info
 COMMAND lcov -q --capture --directory 
 ${CMAKE_CURRENT_BINARY_DIR}/CMakeFiles/test_decode.dir/__/src --output-file decode.info
@@ -87,7 +97,7 @@ COMMAND lcov -q --capture --directory
 ${CMAKE_CURRENT_BINARY_DIR}/CMakeFiles/test_process_data.dir/__/src --output-file process.info
 COMMAND lcov -q --capture --directory 
 ${CMAKE_CURRENT_BINARY_DIR}/CMakeFiles/test_wrp_interface.dir/__/src --output-file wrp.info
-COMMAND lcov -a md5.info -a decode.info -a schedule.info -a process.info -a wrp.info --output-file coverage.info
+COMMAND lcov -a md5.info -a decode.info -a schedule.info -a process.info -a time.info -a wrp.info --output-file coverage.info
 COMMAND genhtml coverage.info
 WORKING_DIRECTORY ${CMAKE_BINARY_DIR})
 
