--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -31,7 +31,7 @@ add_test(NAME test_schedule COMMAND ${MEMORY_CHECK} ./test_schedule)
 add_executable(test_schedule test_schedule.c ../src/schedule_print.c 
                ../src/schedule.c ../src/decode.c ../src/process_data.c
                ../src/aker_md5.c ../src/md5.c
-               ../src/scheduler.c mem_wrapper.c )
+               ../src/scheduler.c mem_wrapper.c common_test_stubs.c)
 target_link_libraries (test_schedule ${AKER_COMMON_LIBS})
 
 #-------------------------------------------------------------------------------
@@ -94,7 +94,7 @@ add_test(NAME test_scheduler COMMAND ${MEMORY_CHECK} ./test_scheduler)
 add_executable(test_scheduler test_scheduler.c ../src/schedule_print.c
                ../src/schedule.c ../src/decode.c ../src/process_data.c
                ../src/aker_md5.c ../src/md5.c
-               ../src/scheduler.c mem_wrapper.c )
+               ../src/scheduler.c mem_wrapper.c common_test_stubs.c)
 target_link_libraries (test_scheduler ${AKER_COMMON_LIBS})
 
 
