Added more support for return status and differentiated CREATE vs UPDATE.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -15,7 +15,7 @@
 set(PROJ_AKER aker)
 set(SOURCES wrp_interface.c decode.c time.c schedule.c main.c
             process_data.c scheduler.c schedule_print.c
-            aker_md5.c md5.c aker_mem.c aker_help.c)
+            aker_md5.c md5.c aker_mem.c aker_help.c aker_msgpack.c)
 
 
 add_executable(aker ${SOURCES})
