--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -15,8 +15,11 @@
 set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -W -g -fprofile-arcs -ftest-coverage -O0")
 set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -W  -g -fprofile-arcs -ftest-coverage -O0")
 set (CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -fprofile-arcs -ftest-coverage -O0")
-set (AKER_COMMON_LIBS gcov -lcunit -lcimplog -lwrp-c -lpthread -lmsgpackc
-     -lnanomsg -Wl,--no-as-needed -ltrower-base64)
+set (AKER_COMMON_LIBS -lcunit -lcimplog -lwrp-c -lpthread -lmsgpackc
+     -lnanomsg -ltrower-base64)
+if (${CMAKE_SYSTEM_NAME} MATCHES "Linux")
+set (AKER_COMMON_LIBS "${AKER_COMMON_LIBS} gcov -Wl,--no-as-needed")
+endif()
 
 if(NOT DISABLE_VALGRIND)
 set (MEMORY_CHECK valgrind --leak-check=full --show-reachable=yes -v)
