--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,16 @@
-dist: trusty
-sudo: required
-
 language: c
+os:
+    - linux
+    - osx
+
+matrix:
+    include:
+        - os: linux
+          dist: trusty
+          sudo: required
 compiler:
     - gcc
+    - clang
 
 env:
     global:
@@ -22,12 +29,13 @@ addons:
     branch_pattern: master
 
 before_install:
-    - sudo pip install codecov
-    - echo -n | openssl s_client -connect scan.coverity.com:443 | sed -ne '/-BEGIN CERTIFICATE-/,/-END CERTIFICATE-/p' | sudo tee -a /etc/ssl/certs/ca-
+    - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo pip install codecov; fi
+    - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then echo -n | openssl s_client -connect scan.coverity.com:443 | sed -ne '/-BEGIN CERTIFICATE-/,/-END CERTIFICATE-/p' | sudo tee -a /etc/ssl/certs/ca-; fi
+    - if [[ "$TRAVIS_OS_NAME" == "osx"   ]]; then brew install cunit valgrind md5sha1sum; fi
+    - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo apt-get update -qq; fi
+    - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo apt-get install -y -qq libcunit1 libcunit1-dev lcov valgrind; fi
 
 install:
-    - sudo apt-get update -qq
-    - sudo apt-get install -y -qq libcunit1 libcunit1-dev valgrind
 
 script:
     - mkdir build
@@ -37,4 +45,4 @@ script:
     - make test
 
 after_success:
-    - codecov
+    - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then codecov; fi
