Use specific release git tags for opensource libraries

--- a/.travis.yml
+++ b/.travis.yml
@@ -31,7 +31,7 @@ addons:
 before_install:
     - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo pip install codecov; fi
     - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then echo -n | openssl s_client -connect scan.coverity.com:443 | sed -ne '/-BEGIN CERTIFICATE-/,/-END CERTIFICATE-/p' | sudo tee -a /etc/ssl/certs/ca-; fi
-    - if [[ "$TRAVIS_OS_NAME" == "osx"   ]]; then brew install cunit valgrind md5sha1sum; fi
+    - if [[ "$TRAVIS_OS_NAME" == "osx"   ]]; then brew install cunit md5sha1sum; fi
     - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo apt-get update -qq; fi
     - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo apt-get install -y -qq libcunit1 libcunit1-dev lcov valgrind; fi
 
@@ -40,7 +40,8 @@ install:
 script:
     - mkdir build
     - cd build
-    - cmake ..
+    - if [[ "$TRAVIS_OS_NAME" == "osx"   ]]; then cmake .. -DDISABLE_VALGRIND:BOOL=true; fi
+    - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then cmake ..; fi
     - make
     - make test
 
