--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -15,8 +15,8 @@
 set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -W -g -fprofile-arcs -ftest-coverage -O0")
 set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -W  -g -fprofile-arcs -ftest-coverage -O0")
 set (CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -fprofile-arcs -ftest-coverage -O0")
-set (AKER_COMMON_LIBS -lcunit -lcimplog -lwrp-c -lpthread -lmsgpackc
-     -lnanomsg -ltrower-base64)
+set (AKER_COMMON_LIBS -lcunit -lcimplog -lwrp-c -lmsgpackc
+     -lnng -ltrower-base64 -lpthread)
 set (AKER_LINUX_LIBS gcov -Wl,--no-as-needed)
 
 if(NOT DISABLE_VALGRIND)
