Revert "update to use nng compatibility instead of nanomsg"

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -43,7 +43,7 @@ endif ()
 target_link_libraries (aker
     ${CMAKE_THREAD_LIBS_INIT}
     -llibparodus
-    -lnng
+    -lnanomsg
     -lwrp-c
     -lmsgpackc
     -ltrower-base64
