--- a/.travis.yml
+++ b/.travis.yml
@@ -26,7 +26,7 @@ addons:
     notification_email: weston_schmidt@alumni.purdue.edu
     build_command_prepend: "mkdir coverity_build && cd coverity_build && cmake .."
     build_command: "make"
-    branch_pattern: master
+    branch_pattern: main
 
 before_install:
     - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo pip install codecov; fi
