Disable coverity unless requested due to rate limiting.

--- a/.travis.yml
+++ b/.travis.yml
@@ -25,7 +25,7 @@ addons:
     notification_email: weston_schmidt@alumni.purdue.edu
     build_command_prepend: "mkdir coverity_build && cd coverity_build && cmake .."
     build_command: "make"
-    branch_pattern: main
+    branch_pattern: coverity
 
 before_install:
     - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo pip install codecov; fi
