--- a/.travis.yml
+++ b/.travis.yml
@@ -120,7 +120,7 @@ jobs:
         - git archive --format=zip    --prefix=${TRAVIS_REPO_NAME}-${VERSION}/ -o ${TRAVIS_REPO_NAME}-${VERSION}.zip    ${TRAVIS_TAG}
         - sha256sum  ${TRAVIS_REPO_NAME}-${VERSION}.tar.gz  ${TRAVIS_REPO_NAME}-${VERSION}.zip > sha256sum.txt
       deploy:
-        skip_cleanup: true
+        cleanup: false
         on:
           all_branches: true
           tags: true
