Change coverity branch to just run on coverity branch.

--- a/.travis.yml
+++ b/.travis.yml
@@ -135,7 +135,7 @@ jobs:
 
     - stage: coverity
       name: "Coverity build"
-      if: branch = main
+      if: branch = coverity
       os: linux
       dist: trusty
       compiler: gcc
