Add ability for cli to fetch schedule from url.
This adds the ability for a user to get a schedule from an active xmidt
cluster with the specified cpe.

Signed-off-by: Weston Schmidt <Weston_Schmidt@alumni.purdue.edu>

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -36,7 +36,7 @@ if (NOT BUILD_YOCTO)
 		-lpthread
 		)
 	if (${CMAKE_SYSTEM_NAME} MATCHES "Linux")
-	target_link_libraries (aker-cli -lrt)
+	target_link_libraries (aker-cli -lrt ${CURL_LIBRARIES})
 	endif()
 endif ()
 
