--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,6 +31,7 @@ file(MAKE_DIRECTORY ${TEST_RESULTS_DIR})
 include_directories(${INCLUDE_DIR}
                     ${INCLUDE_DIR}/cimplog
                     ${INCLUDE_DIR}/msgpack
+                    ${INCLUDE_DIR}/libmpack
                     ${INCLUDE_DIR}/trower-base64
                     ${INCLUDE_DIR}/wrp-c
                     ${INCLUDE_DIR}/libparodus
@@ -51,6 +52,8 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Werror -Wall")
 #-------------------------------------------------------------------------------
 find_package (Threads)
 
+if (NOT BUILD_YOCTO)
+
 # curl external dependency
 #-------------------------------------------------------------------------------
 include(FindPkgConfig)
@@ -58,9 +61,6 @@ pkg_check_modules(CURL libcurl REQUIRED)
 include_directories(
   SYSTEM ${CURL_INCLUDE_DIRS}
 )
-
-
-if (NOT BUILD_YOCTO)
 
 # base64 external dependency
 #-------------------------------------------------------------------------------
