--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -15,7 +15,7 @@
 set(PROJ_AKER aker)
 set(SOURCES wrp_interface.c decode.c time.c schedule.c
             process_data.c scheduler.c schedule_print.c
-            aker_md5.c md5.c aker_mem.c aker_help.c aker_msgpack.c)
+            aker_md5.c md5.c aker_mem.c aker_help.c aker_msgpack.c aker_metrics.c)
 
 if (NOT BUILD_YOCTO)
     set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -W -g -fprofile-arcs -ftest-coverage -O0")
