--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -23,6 +23,7 @@ jobs:
       run: |
         sudo apt update
         sudo apt-get -y install valgrind libcunit1 libcunit1-doc libcunit1-dev gcovr
+        sudo apt-get -y install libcjson-dev libcurl4-openssl-dev
  
     - name: Initialize CodeQL
       uses: github/codeql-action/init@v1
