--- a/.github/workflows/tag.yml
+++ b/.github/workflows/tag.yml
@@ -9,7 +9,6 @@ on:
       - "CHANGELOG.md" # only try to tag if the CHANGELOG has been updated.
     branches:
       - main
-      - master
 
 jobs:
   build:
@@ -27,7 +26,7 @@ jobs:
         run: |
           export OLD_VERSION=$(git describe --tags `git rev-list --tags --max-count=1` | tail -1)
           export TAG=$(cat CHANGELOG.md | perl -0777 -ne 'print "$1" if /.*## \[Unreleased\]\s+## \[(v?\d+.\d+.\d+)\].*/s')
-          export BINVER=$(cat CMakeLists.txt | perl -0777 -ne 'print "v$1" if /.*set\s*\(.*\s*VERSION\s*(\d+.\d+.\d+).*\s*\)/s')
+          export BINVER=$(cat CMakeLists.txt | perl -0777 -ne 'print "v$1" if /.*set\s*\(.*\s*VERSION\s*\"(\d+.\d+.\d+)\".*\s*\)/s')
           export TODAY=`date +'%m/%d/%Y'`
           export NOTES=$(cat CHANGELOG.md | perl -0777 -ne 'print "$ENV{TODAY}\n\n$1\n" if /.*## \[$ENV{TAG}\]\s(.*?)\s+## \[(v\d+.\d+.\d+)\].*/s')
           if [[ "$TAG" != "" && "$TAG" != "$BINVER" ]]; then echo "CHANGELOG.md($TAG) and CMakeLists.txt VERSION($BINVER) do not match"; fi
